--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/263029.pt">Banco Central e Reino Unido assinam acordo de cooperação</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--20">Advice for British nationals in Kolkata</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/171667.pt">Desafio GREAT levará jovens jornalistas `a Londres</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/212806.th">เรือรบหลวงแดริ่ง (HMS Daring) กองทัพเรือแห่งสหราชอาณาจักรเยือนไทย</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/thirtieth-session-of-the-human-rights-council-geneva-14-september-to-2-october-2015--5">Thirtieth Session of the Human Rights Council, Geneva, 14 September to 2 October 2015</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/dfid-improves-corporate-governance-in-tajikistan-and-kyrgyzstan--2">DFID Improves Corporate Governance in Tajikistan and Kyrgyzstan</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/233481.az">Britaniya XİN Rauf Mirqədirovun həbsindən narahatdı</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--8">Advice for British nationals in Chennai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/the-consular-section-in-ankara-will-be-closed-next-week--2">Offices in Turkey will be closed due to Eid Holiday</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/new-york-celebrates-british-culture-and-creativity-with-sir-ian-mckellen--6">New York celebrates British culture and creativity with Sir Ian McKellen</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-update--5">Turks and Caicos post-Cabinet update</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/224623.es-419">Concurso &ldquo;Inauguración Testino&rdquo; en Argentina</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/287987.pt">Consulado promove recepção para empresas de Petróleo e Gás</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-17th-session-of-universal-periodic-review-working-group-geneva-21-october-to-1-november-2013--3">Human Rights Council: 17th Session of Universal Periodic Review Working Group, Geneva, 21 October to 1 November 2013</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/210510.zh-tw">英國慶祝世界人權日 讚許台灣人權發展</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-update--6">Turks and Caicos post Cabinet Update</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/192303.es">Listado de universidades, colegios, y distribuidores de material didáctico participantes en la feria</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-mumbai--5">Advice for British nationals in Mumbai</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/telephone-lines-out-of-order-at-the-british-embassy-in-havana">Telephone connection restored at the British Embassy in Havana</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/un-human-rights-council-the-united-kingdoms-voluntary-pledges-and-commitments-on-human-rights-2013--2">UN Human Rights Council - The United Kingdom&rsquo;s Voluntary Pledges and Commitments on Human Rights 2013</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
