--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-update--5">Turks and Caicos post-Cabinet update</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/173029.lt">Lietuvos kariai tarnaus JK vadovaujamoje ES kovinėje grupėje</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/president-pierre-buyoya-opens-second-wilton-park-conference-on-peacebuilding-in-africa-in-addis-ababa--2">President Pierre Buyoya opens second Wilton Park conference on ‘Peacebuilding in Africa’ in Addis Ababa</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/--6">國家海洋安全戰略</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/257425.ja">英国ショッピングウィークを今秋、日本で初開催</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/new-honorary-consul-appointed-in-the-bahamas">New honorary consul appointed in the Bahamas</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/chevening-scholarship-places-in-developing-countries-tripled-for-201516">Chevening Scholarship places in developing countries tripled for 2015/16</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/professor-charles-hendry-the-prime-minister-s-trade-envoy-to-kazakhstan-visits-kazakhstan">Professor Charles Hendry, the Prime Minister’s Trade Envoy to Kazakhstan, visits Kazakhstan</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/224623.es-419">Concurso &ldquo;Inauguración Testino&rdquo; en Argentina</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/287987.pt">Consulado promove recepção para empresas de Petróleo e Gás</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-17th-session-of-universal-periodic-review-working-group-geneva-21-october-to-1-november-2013--3">Human Rights Council: 17th Session of Universal Periodic Review Working Group, Geneva, 21 October to 1 November 2013</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/210510.zh-tw">英國慶祝世界人權日 讚許台灣人權發展</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-update--6">Turks and Caicos post Cabinet Update</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/192303.es">Listado de universidades, colegios, y distribuidores de material didáctico participantes en la feria</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-mumbai--5">Advice for British nationals in Mumbai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/telephone-lines-out-of-order-at-the-british-embassy-in-havana">Telephone connection restored at the British Embassy in Havana</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/un-human-rights-council-the-united-kingdoms-voluntary-pledges-and-commitments-on-human-rights-2013--2">UN Human Rights Council - The United Kingdom&rsquo;s Voluntary Pledges and Commitments on Human Rights 2013</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-update--5">Turks and Caicos post-Cabinet update</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/twenty-third-session-of-the-universal-periodic-review-geneva-2-to-13-november-2015--2">Twenty-Third Session of the Universal Periodic Review, Geneva, 2 to 13 November 2015</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
