--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-17th-session-of-universal-periodic-review-working-group-geneva-21-october-to-1-november-2013--3">Human Rights Council: 17th Session of Universal Periodic Review Working Group, Geneva, 21 October to 1 November 2013</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/solidarity-with-the-syrian-people">Solidarity with the Syrian People</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/296094.es">La Embajada Británica busca socio empresarial para Tea Shop en el Pabellón Británico</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-minister-impressed-with-sa-leg-of-bloodhound-education-project--2">British Minister impressed with SA leg of Bloodhound education project</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/changes-to-passport-services-for-british-nationals--5">Changes to passport services for British nationals</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/225603.pt">Ampliando a cooperação entre Brasil e Reino Unido</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/consular-enquiries-for-europe">Consular enquiries for Europe</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/232340.es">Expertos internacionales analizan planes nacionales de empresa y derechos humanos</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/taipei-office-closures--3">Taipei office closures</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/hand-in-hand-with-a-more-dynamic-africa--2">Hand in hand with a more dynamic Africa</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/improving-intercultural-understanding-in-macedonia--2">Improving intercultural understanding in Macedonia</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/294447.pt">Inovações Britânicas na área da saúde na Hospitalar 2015</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-visa-applicant-arrested-for-fraud--2">UK Visa Applicant Arrested for Fraud</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/232492.ja">Educational Testing Service (ETS)　について</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/293342.ja">英国自動車フォーラムおよびネットワーキングレセプションのご案内</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-18th-session-of-the-universal-periodic-review-working-group-geneva-27-january-to-7-february-2014--6">Human Rights Council: 18th Session of the Universal Periodic Review Working Group, Geneva, 27 January to 7 February 2014</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/solidarity-with-the-syrian-people">Solidarity with the Syrian People</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/296094.es">La Embajada Británica busca socio empresarial para Tea Shop en el Pabellón Británico</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
